[gd_scene load_steps=6 format=3 uid="uid://b652l7v6cpsrr"]

[ext_resource type="Theme" uid="uid://dchftuxx2uqu2" path="res://themes/WindowTheme.tres" id="1_72klk"]
[ext_resource type="Script" uid="uid://sb3x3jmgectm" path="res://cu_node_type_scene.gd" id="2_yx5b0"]

[sub_resource type="Theme" id="Theme_p0ypg"]
Button/font_sizes/font_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xl5h4"]
bg_color = Color(0.25098, 0.25098, 0.25098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yldk2"]
bg_color = Color(0.25098, 0.25098, 0.25098, 1)

[node name="CuNodeDialog" type="PopupPanel"]
title = "‚ûïEdit Node Type ..."
initial_position = 1
size = Vector2i(800, 274)
visible = true
borderless = false
min_size = Vector2i(800, 0)
theme = ExtResource("1_72klk")
script = ExtResource("2_yx5b0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 780.0
offset_bottom = 254.0

[node name="VBox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Grid" type="GridContainer" parent="VBoxContainer/VBox"]
layout_mode = 2
columns = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/VBox/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Name"

[node name="NameEdit" type="TextEdit" parent="VBoxContainer/VBox/Grid"]
custom_minimum_size = Vector2(460, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 25
placeholder_text = "Press <ENTER> to commit"

[node name="ShortDescLabel" type="Label" parent="VBoxContainer/VBox/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Short Description"

[node name="ShortDescEdit" type="TextEdit" parent="VBoxContainer/VBox/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
placeholder_text = "Tell me what is the node"

[node name="LongDescLabel" type="Label" parent="VBoxContainer/VBox/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Long Description"

[node name="LongDescEdit" type="TextEdit" parent="VBoxContainer/VBox/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
placeholder_text = "Tell me what func/params it have"

[node name="TextureLabel" type="Label" parent="VBoxContainer/VBox/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Texture"

[node name="TextureHint" type="Label" parent="VBoxContainer/VBox/Grid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 0.956863, 0.956863, 0.513726)
theme_override_font_sizes/font_size = 20
text = "ü§î Recommand svg/png"
horizontal_alignment = 2

[node name="NodeTexture" type="Sprite2D" parent="VBoxContainer/VBox"]
position = Vector2(280, 152)

[node name="HBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ConfirmButton" type="Button" parent="VBoxContainer/HBox"]
custom_minimum_size = Vector2(375, 50)
layout_mode = 2
theme = SubResource("Theme_p0ypg")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_xl5h4")
theme_override_styles/normal = SubResource("StyleBoxFlat_yldk2")
text = "‚úÖConfirm"

[node name="CancelButton" type="Button" parent="VBoxContainer/HBox"]
custom_minimum_size = Vector2(375, 50)
layout_mode = 2
theme = SubResource("Theme_p0ypg")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_xl5h4")
theme_override_styles/normal = SubResource("StyleBoxFlat_yldk2")
text = "‚ùéCancel"

[connection signal="pressed" from="VBoxContainer/HBox/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBox/CancelButton" to="." method="_on_cancel_button_pressed"]
